--- a/inline.html
+++ b/inline.html
@@ -1,1 +1,12 @@
-Novo arquivo 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>CSS</title>
+</head>
+<body>
+  <h1 style="color: red; font-size: 30px;">titulo da pagina</h1>
+  <p style="color: greenyellow; font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;">este e um paragrafo de texto</p>
+</body>
+</html>
